@@ -1,3 +1,8 @@
+Wed Nov 25 14:11:31 1998  Scott Stanton  <stanton@uncle>
+
+	* unix/tkUnixMenu.c: hidemargin option was not honored properly in
+	menus [Bug: 859]
+
 1998-11-24    <stanton@GASPODE>
 
 	* tkMacMenu.c, tkUnixMenu.c, tkWinMenu.c, tkMenuDraw.c, tkMenu.h,
